# mcp-server

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .workflow-patcher.yml  Dockerfile  README.md  README.rst  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml
.github/workflows/: cd-debug.yml  cd-extension.yml  cd.yml  checks.yml  create-docker-image-debug.yml  create-docker-image.yml  merge-gate.yml  report.yml  slow-checks-itde.yml  slow-checks-saas.yml  slow-checks.yml
doc/: conf.py  design.rst  index.rst
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.2.0.md  changes_0.3.0.md  changes_0.4.0.md  changes_0.5.0.md  changes_0.6.0.md  changes_0.7.0.md  changes_1.0.0.md  changes_1.1.0.md  changes_1.10.0.md  changes_1.10.1.md  changes_1.2.0.md  changes_1.2.1.md  changes_1.3.0.md  changes_1.4.0.md  changes_1.5.0.md  changes_1.6.0.md  changes_1.6.1.md  changes_1.6.2.md  changes_1.7.0.md  changes_1.8.0.md  changes_1.9.0.md  unreleased.md
doc/developer_guide/: developer_guide.rst
doc/user_guide/: bucketfs_setup.rst  db_connection_setup.md  db_connection_setup.rst  deployment.rst  integration.rst  open_id_setup.md  open_id_setup.rst  server_setup.md  server_setup.rst  skills.rst  tool_list.rst  tool_setup.md  tool_setup.rst  user_guide.rst
exasol/ai/mcp/server/: __init__.py  bucket_fs_tools.py  bucketfs_tools.py  connection_factory.py  db_connection.py  generic_auth.py  keyword_search.py  main.py  (+9 more)
scripts/: scrape_builtin_functions.py  verify_skills.py
test/integration/: conftest.py  test_bucket_fs_tools.py  test_bucketfs_tools.py  test_db_connection.py  test_keyword_search.py  test_mcp_bucketfs.py  test_mcp_oidc.py  test_mcp_resource.py  test_mcp_server.py  test_write_query.py
test/integration/setup/: test_custom_routes.py  test_dynamodb_storage.py  test_mcp_oidc.py
test/integration/skills/: test_skills_client.py
test/integration/tools/: test_bucketfs_tools.py  test_dialect_tools.py  test_mcp_server.py  test_tool_hints.py  test_write_query.py
test/manual/: mcp_client.py  mock_identity_server.py
test/unit/: conftest.py  test_bucketfs_tools.py  test_connection_factory.py  test_db_connection.py  test_generic_auth.py  test_keyword_search.py  test_main.py  test_mcp_resources.py  test_mcp_server.py  test_meta_query.py  test_named_object_pool.py  test_parameter_parser.py  test_parameter_pattern.py  test_paremeter_pattern.py  test_skills.py  test_skills_install.py  test_udf_call_examples.py  test_utils.py  test_verify_query.py  test_vet_query.py  unit_smoke_test.py
test/unit/connection/: test_connection_factory.py  test_db_connection.py
test/unit/settings/: test_generic_auth.py
test/unit/tools/: test_bucketfs_tools.py  test_dialect_tools.py  test_mcp_server.py  test_meta_query.py  test_parameter_parser.py  test_parameter_pattern.py  test_udf_call_examples.py
test/unit/utils/: test_keyword_search.py  test_named_object_pool.py
test/utils/: db_objects.py  mcp_oidc_constants.py  result_utils.py  sql_utils.py  text_utils.py  tool_utils.py
(+21 files in other folders)
