[project]
name = "exasol-mcp-server"
version = "1.10.1"
description = "Exasol MCP Server"
authors = [{ name = "Mikhail Beck", email = "mikhail.beck@exasol.com" }]
requires-python = ">=3.10,<3.14" # Restriction is due to numpy
readme = "README.rst"
license = "MIT"
keywords = [
    "exasol",
    "MCP server",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.2.4,<4",
    "pyexasol>=1.0.0,<2",
    "sqlglot>=27.2.0,<28",
    "numpy>=2,<=2.2.0",
    "stopwords>=1.0.1,<2",
    "rank-bm25>=0.2.2,<0.3",
    "click>=8.2.0,<9",
    "exasol-saas-api>=2.4.0,<3",
    "exasol-bucketfs>=2.1.0,<3",
    "aiofile>=3.9.0,<4",
    "pathvalidate>=3.3.1,<4",
    "exasol-telemetry-client>=0.1.5,<0.2",
]

[project.optional-dependencies]
dynamodb = ["aioboto3>=13.3.0"]
redis = ["redis>=4.3.0"]
mongodb = ["pymongo>=4.0.0"]

[project.urls]
repository = "https://github.com/exasol/mcp-server"
homepage = "https://github.com/exasol/mcp-server"

[project.scripts]
exasol-mcp-server = "exasol.ai.mcp.server.main:main"
exasol-mcp-server-http = "exasol.ai.mcp.server.main:main_http"
exasol-install-skills = "exasol.ai.mcp.server.main:install_skills_cli"

[dependency-groups]
dev = [
    "exasol-toolbox>=8.2.0,<9",
    "pytest-exasol-backend>=1.2.1,<2",
    "pytest-exasol-extension>=1.0.1,<2",
    "exasol-integration-test-docker-environment>=5.0.0,<6",
    "oidc-provider-mock>=0.2.9,<0.3",
    "flask-oidc>=2.4.0,<3",
    "pytest-httpserver>=1.1.3,<2",
]
dynamodb-tests = [
    "aioboto3>=13.3.0",
    "moto[dynamodb, server]>=5.2.1,<6",
]

[tool.poetry.group.dynamodb-tests]
optional = true


[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [
    { include = "exasol" },
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
output-format = "colorized,json:.lint.json,text:.lint.txt"
ignore-paths = [
    ".*/test/.*",
]

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.ruff.lint]
extend-ignore = [
    "E",      # Syntax errors
    "F",      # Pyflakes rules (excluding F401)
    "UP",     # pyupgrade rules
    "D",      # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.sonar]
projectKey = "exasol.com:mcp-server"
host.url = "https://sonarcloud.io"
organization = "exasol"
